# UserBot

./: .env.example  .gitignore  README.md  docker-compose.yml  init_session.py  userbot.py
receiver/: Dockerfile  main.py  pyproject.toml
sender/: Dockerfile  main.py  pyproject.toml
