[tool.poetry]
name = "userbot-sender"
version = "0.1.0"
description = "Telegram user account sender service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "^2.0"
tgcrypto = "^1.2.5"
fastapi = "^0.103"
uvicorn = "^0.23"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
